@@ -1,3 +1,8 @@
+2014-07-14  Niels Möller  <nisse@lysator.liu.se>
+
+	* testsuite/curve25519-dup-test.c (test_main): Add test for 4g.
+	Delete some left-over debug output.
+
 2014-07-11  Niels Möller  <nisse@lysator.liu.se>
 
 	* misc/ecc-formulas.tex: Some ECC notes.
